# dizi

./: Cargo.toml  README.md
.github/workflows/: rust-linux-main.yml
config/: client.toml  keymap.toml  layout.json  layout.toml  server.toml  theme.toml
docs/: README.md
docs/configuration/: README.md  client.toml.md  keymap.toml.md  layout.json.md  server.toml.md  theme.toml.md
docs/query/: README.md
lib/dizi_commands/: Cargo.toml
lib/dizi_commands/src/: api_command.rs  constants.rs  lib.rs  player.rs
lib/dizi_commands/src/error/: error_kind.rs  mod.rs
lib/dizi_commands/src/structs/: mod.rs  player.rs  player_play.rs
lib/dizi_lib/: Cargo.toml
lib/dizi_lib/src/: constants.rs  lib.rs  macros.rs  player.rs  playlist.rs  song.rs  traits.rs
lib/dizi_lib/src/error/: error_kind.rs  error_type.rs
lib/dizi_lib/src/request/: client.rs  constants.rs  player.rs  server.rs
lib/dizi_lib/src/response/: constants.rs  mod.rs  player.rs  server.rs
lib/dizi_lib/src/utils/: mod.rs  stream.rs
src/: lib.rs  player.rs  playlist.rs  song.rs
src/client/: event.rs  history.rs  main.rs  run.rs  tab.rs
src/client/commands/: change_directory.rs  command_line.rs  cursor_move.rs  goto.rs  mod.rs  open_file.rs  parent_directory.rs  player.rs  quit.rs  reload.rs  search.rs  search_glob.rs  search_skim.rs  search_string.rs  selection.rs  show_hidden.rs  sort.rs
src/client/config/: mod.rs
src/client/config/general/: app.rs  client.rs  config.rs  display.rs  display_crude.rs  display_raw.rs  layout.rs  layout_crude.rs  layout_raw.rs  mod.rs  player.rs  player_crude.rs  sort.rs  sort_crude.rs  sort_raw.rs
src/client/config/keymap/: default_keymap.rs  keymapping.rs
src/client/config/option/: display_option.rs  layout_option.rs  mod.rs  player_option.rs  sort_option.rs  sort_type.rs
src/client/config/theme/: app_theme.rs  mod.rs  style.rs
src/client/context/: app_context.rs  mod.rs  server_state.rs  tab_context.rs
src/client/event/: app_event.rs  process_event.rs
src/client/fs/: dirlist.rs  entry.rs  metadata.rs  mod.rs
src/client/key_command/: commands.rs  constants.rs  impl_appcommand.rs  impl_appexecute.rs  impl_display.rs  impl_from_keymap.rs  impl_from_str.rs  mod.rs  traits.rs
src/client/preview/: mod.rs  preview_default.rs  preview_dir.rs
src/client/run/: mod.rs  run_control.rs  run_query.rs  run_query_all.rs  run_ui.rs
src/client/ui/: mod.rs  tui_backend.rs
src/client/ui/views/: mod.rs  tui_folder_view.rs  tui_textfield.rs  tui_view.rs
src/client/ui/widgets/: mod.rs  tui_dirlist_detailed.rs  tui_footer.rs  tui_player.rs  tui_playlist.rs  tui_topbar.rs
src/client/util/: display_option.rs  format.rs  input.rs  mod.rs  request.rs  sort_option.rs  sort_type.rs  style.rs  unix.rs
src/error/: error_kind.rs  error_type.rs  mod.rs
src/request/: client.rs
src/response/: mod.rs  server.rs
src/server/: client.rs  client_command.rs  command.rs  events.rs  macros.rs  main.rs  server.rs  server_command.rs  server_util.rs
src/server/audio/: device.rs  mod.rs  pipewire.rs  player.rs  player_stream.rs  playlist.rs  request.rs  song.rs  stream.rs  traits.rs
src/server/audio/rodio/: mod.rs  player.rs  stream.rs
src/server/audio/symphonia/: decode.rs  player.rs  stream.rs
src/server/client_commands/: player.rs  quit.rs
src/server/commands/: mod.rs  player.rs  playlist.rs  quit.rs
src/server/config/: mod.rs
src/server/config/default/: default.rs  general.rs  mod.rs  server.rs
src/server/config/general/: app.rs  mod.rs  player.rs  server.rs
src/server/context/: app_context.rs  mod.rs  player_context.rs  playlist_context.rs
src/server/handlers/: mod.rs  player.rs  websocket.rs
src/server/handlers/playlist/: add_song.rs  get_playlist.rs  mod.rs  remove_song.rs
src/server/playlist/: mod.rs
src/server/playlist/playlist_directory/: impl_ordered_playlist.rs  impl_shuffle_playlist.rs  mod.rs
src/server/playlist/playlist_file/: impl_ordered_playlist.rs  impl_shuffle_playlist.rs  mod.rs
src/server/playlist/traits/: mod.rs  ordered_playlist.rs  shuffle_playlist.rs
src/server/server_commands/: mod.rs  player.rs  playlist.rs  quit.rs  server.rs
src/server/traits/: audio_player.rs  ordered_playlist.rs
src/server/util/: mimetype.rs  mod.rs
