[package]
name = "dizi"
version = "0.2.1"
authors = ["Jeff Zhao <jeff.no.zhao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dizi-server"
path = "src/server/main.rs"

[[bin]]
name = "dizi"
path = "src/client/main.rs"

[dependencies]
alphanumeric-sort = "^1"
chrono = "^0"
crossbeam = "^0"
dirs-next = "^2"
env_logger = "^0"
globset = "^0"
lazy_static = "^1"
log = "^0"
libc = "^0"
m3u = "^1"
rand = "^0"
rustyline = "^4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
shell-words = "^1"
shellexpand = "^2"
signal-hook = "^0"
skim = "^0"
structopt = "^0"
termion = "^1"
toml = "^0"
tui = "^0"
unicode-width = "^0"
unicode-segmentation = "^1"
uuid = { features = [ "v4" ], version = "^0" }
xdg = "^2"

rodio = { features = [ "symphonia-all" ], git = "https://github.com/RustAudio/rodio.git", version = "^0" }

dizi_lib = { path = "lib/dizi_lib", version = "^0" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
cpal = { features = [ "jack" ], version = "^0" }
# pipewire = { optional = true, version = "^0" }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "^0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cpal = "^0"


[features]
default = []
