[package]
name = "dizi"
version = "0.3.0"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
edition = "2021"
description = "Terminal music player inspired by moc"
homepage = "https://github.com/kamiyaa/dizi"
repository = "https://github.com/kamiyaa/dizi"
license = "LGPL-3.0"
keywords = ["ratatui", "music-player"]
categories = ['command-line-interface', 'command-line-utilities']


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dizi-server"
path = "src/bin/server/main.rs"

[[bin]]
name = "dizi"
path = "src/bin/client/main.rs"

[dependencies]
alphanumeric-sort = "^1"
chrono = "^0"
crossbeam = "^0"
dirs-next = "^2"
env_logger = "^0"
globset = "^0"
lazy_static = "^1"
log = "^0"
libc = "^0"
m3u = "^1"
rand = "^0"
rustyline = "^4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
shell-words = "^1"
shellexpand = "^2"
signal-hook = "^0"
skim = "^0"
strfmt = "^0"
structopt = "^0"
termion = "^1"
toml = "^0"
unicode-width = "^0"
unicode-segmentation = "^1"
xdg = "^2"

[dependencies.phf]
version = "^0"
features = ["macros"]
optional = true

[dependencies.symphonia]
version = "^0"
features = ["all"]

[dependencies.tui]
features = ["termion"]
default-features = false
version = "^0"

[dependencies.uuid]
features = [ "v4" ]
version = "^0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
cpal = { features = [ "jack" ], version = "^0" }
# pipewire = { optional = true, version = "^0" }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "^0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cpal = "^0"


[features]
default = [ "devicons" ]
devicons = [ "phf" ]
