[package]
name = "dizi"
version = "0.3.0"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
edition = "2021"
description = "Terminal music player inspired by moc"
homepage = "https://github.com/kamiyaa/dizi"
repository = "https://github.com/kamiyaa/dizi"
license = "LGPL-3.0"
keywords = ["ratatui", "music-player"]
categories = ['command-line-interface', 'command-line-utilities']


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dizi-server"
path = "src/bin/server/main.rs"

[[bin]]
name = "dizi"
path = "src/bin/client/main.rs"

[dependencies]
alphanumeric-sort = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
dirs-next = "^2"
globset = "^0"
lazy_static = "^1"
libc = "^0"
memmap = "^0"
m3u = "^1"
phf = { version = "^0", features = ["macros"], optional = true }
rand = "^0"
ratatui = { version = "^0", default-features = false, features = ["termion"] }
rustyline = "^4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
shell-words = "^1"
shellexpand = "^2"
signal-hook = "^0"
skim = "^0"
strfmt = "^0"
symphonia = { version = "^0", features = ["all"] }
termion = "^1"
tokio = { version = "^1", features = [ "macros", "rt", "rt-multi-thread" ] }
toml = "^0"
tracing = "^0"
tracing-subscriber = { version = "^0", features = [ "std", "env-filter" ] }
uuid = { version = "^0", features = ["v4"] }
unicode-width = "^0"
unicode-segmentation = "^1"
xdg = "^2"
cpal = "^0"
# pipewire = { optional = true, version = "^0" }

[features]
default = [ "devicons" ]
devicons = [ "phf" ]
jack = [ "cpal/jack" ]
mouse = []