[package]
name = "dizi_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "^0"
globset = "^0"
rodio = { features = [ "symphonia-all" ], git = "https://github.com/RustAudio/rodio.git", version = "^0" }
symphonia = { version = "^0", optional = true }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
strfmt = "^0"
toml = "^0"

[features]
default = [ "symphonia-backend" ]
symphonia-backend = [ "symphonia" ]
