[package]
name = "dizi_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "^0"
globset = "^0"
rodio = { features = [ "symphonia-all" ], git = "https://github.com/RustAudio/rodio.git", version = "^0" }
symphonia = { version = "^0", optional = true }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
strfmt = "^0"
toml = "^0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
cpal = { features = [ "jack" ], version = "^0" }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "^0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cpal = "^0"

[features]
default = [ "symphonia-backend" ]
symphonia-backend = [ "symphonia" ]
